# Config

./: README.md
backend/: .gitignore  build.gradle.kts  settings.gradle.kts
backend/buildSrc/src/main/kotlin/: Versions.kt
backend/src/main/kotlin/de/maaxgr/config/backend/: ConfigBackend.kt  Main.kt
backend/src/main/kotlin/de/maaxgr/config/backend/businesslogic/helper/: Hasher.kt
backend/src/main/kotlin/de/maaxgr/config/backend/businesslogic/utils/: KoinUtils.kt
backend/src/main/kotlin/de/maaxgr/config/backend/dataaccess/config/: ConfigConstants.kt  ConfigLoader.kt  SerializableEntities.kt
backend/src/main/kotlin/de/maaxgr/config/backend/dataaccess/database/master/: MasterDatabaseSource.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/: Webserver.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/entities/: UIRepository.kt  UIRepositoryDetail.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/helpers/: AuthenticationGuard.kt  UserContext.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/routes/repository/: RepositoryDetailGetCall.kt  RepositoryInitPostRouteCall.kt  RepositorySearchGetCall.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/routes/user/: UserLoginPostRoute.kt
backend/src/main/kotlin/de/maaxgr/config/backend/usermanagement/routes/variant/: VariantConfigGetCall.kt  VariantConfigPostCall.kt
cli/: Cargo.toml
cli/src/: api.rs  main.rs
cli/src/api/: get_repository_details.rs
(+5 files in other folders)
